# phoenix-browser

./: .gitignore  CLAUDE.md  README.md
.claude/skills/: phoenix-agent-start.md  phoenix-build-extension.md  phoenix-check-alerts.md  phoenix-check-events.md  phoenix-health-check.md  phoenix-manage-policy.md  phoenix-manage-rules.md  phoenix-run-tests.md  phoenix-send-test-event.md
agent/: pyproject.toml
agent/phoenix_agent/: __init__.py  config.py  main.py
agent/tests/: conftest.py  test_alerts.py  test_dashboard.py  test_events.py  test_health.py  test_policy.py  test_rules.py
clickfix-simulator/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_HANDBOOK.md  Dockerfile  LICENSE  README.md  SECURITY.md  cloner.py  config.py  docker-compose.yml  entrypoint.sh  requirements.txt  run.bat  run.py
clickfix-simulator/app/: __init__.py  cli.py  models.py  utils.py
clickfix-simulator/docs/: admin-guide.md  deployment-guide.md  how-to-create-traps.md  how-to-use-cloner.md  technical-architecture.md
clickfix-simulator/templates/: base_layout.html  index.html
clickfix-simulator/tests/: locustfile.py  test-docker-compose.bat  test-docker.bat
extension/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js  webpack.config.ts
native-host/: Cargo.toml  build-windows.sh  com.phoenix.shield.json  install.sh
native-host/src/: etw_monitor.rs  main.rs  process_monitor.rs
scripts/: install-etw-monitor.ps1  register-extension.sh  register-native-host.ps1  register-native-host.sh
(+103 files in other folders)
